--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -3,8 +3,8 @@
 <head>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
-<link href="Untitled-1.html" rel="stylesheet" type="text/CSS">
+    
+<link href="calculadora.css" rel="stylesheet" type="text/CSS">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,8 +12,8 @@
 </head>
 
 <body>
+    <div   id = "cal" class="shadow-lg p-3 mb-5 bg-body-tertiary rounded"> Case | Estagio em Desenvolvimento Backend</div>
     
-    <div id="cal" class="shadow-lg p-3 mb-5 bg-body-tertiary rounded">Case | Estagio em Desenvolvimento Backend</div> 
 
 </body>
 
