--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -12,8 +12,29 @@
 </head>
 
 <body>
-    <div   id = "cal" class="shadow-lg p-3 mb-5 bg-body-tertiary rounded"> Case | Estagio em Desenvolvimento Backend</div>
+    <div id="call" class="p-3 mb-2 bg-danger-subtle text-emphasis-danger"> Case | Estagio em Desenvolvimento Backend</div>
+
+    <div class="list-group">
+
+        <a href="#" class="list-group-item list-group-item-action">Calculadora</a>
+      
+        <a href="#" class="list-group-item list-group-item-action list-group-item-primary">Creditos</a>
+
+        <a href="#" class="list-group-item list-group-item-action list-group-item-secondary">Resumo do codigo</a>
+
+        <a href="#" class="list-group-item list-group-item-action list-group-item-success">Quem foi pitagoras?</a>
+
+        <a href="#" class="list-group-item list-group-item-action list-group-item-danger">Qual ideia das apis?</a>
+
+        <a href="https://br.linkedin.com/?src=go-pa&trk=sem-ga_campid.12619604099_asid.148548608796_crid.656532769092_kw.linked_d.c_tid.kwd-103941963_n.g_mt.e_geo.1001590&mcid=6821526239111716925&cid=&gclid=Cj0KCQjwpc-oBhCGARIsAH6ote8gUC_T743i8KAEjZleu3VXGqDfCK6lTePD3KQ7wXIaKj_hQZL-PLMaAt35EALw_wcB&gclsrc=aw.ds" class="list-group-item list-group-item-action list-group-item-warning">Linkedin</a>
+
+        <a href="https://github.com/suellenwi/calculadora/settings/access?guidance_task=" class="list-group-item list-group-item-action list-group-item-info">Github</a>
+
+        <a href="https://www.instagram.com/" class="list-group-item list-group-item-action list-group-item-light">Instagram</a>
+
+      </div>
     
+<
 
 </body>
 
