--- a/index.html
+++ b/index.html
@@ -21,11 +21,52 @@
       
         <a href="#" class="list-group-item list-group-item-action list-group-item-primary">Creditos</a>
 
+
         <a href="#" class="list-group-item list-group-item-action list-group-item-secondary">Resumo do codigo</a>
+        <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                    Resumo do codigo
+                </button>
+              </h2>
+              <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+              </div>
+            </div>
+
 
         <a href="#" class="list-group-item list-group-item-action list-group-item-success">Quem foi pitagoras?</a>
+        <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h1 class="accordion-header">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    Quem foi pitagoras?
+                </button>
+              </h1>
+              <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                </div>
+              </div>
+            </div>
 
-        <a href="#" class="list-group-item list-group-item-action list-group-item-danger">Qual ideia das apis?</a>
+
+        <div class="accordion" id="accordionExample">
+            <div id="acordi" class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    <p>Qual ideia das apis?</p>
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                </div>
+              </div>
+            </div>
+        </div>
+
 
         <a href="https://br.linkedin.com/?src=go-pa&trk=sem-ga_campid.12619604099_asid.148548608796_crid.656532769092_kw.linked_d.c_tid.kwd-103941963_n.g_mt.e_geo.1001590&mcid=6821526239111716925&cid=&gclid=Cj0KCQjwpc-oBhCGARIsAH6ote8gUC_T743i8KAEjZleu3VXGqDfCK6lTePD3KQ7wXIaKj_hQZL-PLMaAt35EALw_wcB&gclsrc=aw.ds" class="list-group-item list-group-item-action list-group-item-warning">Linkedin</a>
 
