--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 
         <a href="#" class="list-group-item list-group-item-action">Calculadora</a>
       
-        <a href="#" class="list-group-item list-group-item-action list-group-item-primary">Creditos</a>
+        <a href="link" class="list-group-item list-group-item-action list-group-item-primary">Creditos</a>
+    
 
 
-        <a href="#" class="list-group-item list-group-item-action list-group-item-secondary">Resumo do codigo</a>
         <div class="accordion accordion-flush" id="accordionFlushExample">
             <div class="accordion-item">
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                    Resumo do codigo
+                   <p>Resumo do codigo</p>
                 </button>
               </h2>
               <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
@@ -35,13 +35,11 @@
               </div>
             </div>
 
-
-        <a href="#" class="list-group-item list-group-item-action list-group-item-success">Quem foi pitagoras?</a>
         <div class="accordion" id="accordionExample">
             <div class="accordion-item">
               <h1 class="accordion-header">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    Quem foi pitagoras?
+                   <p>Quem foi pitagoras?</p>
                 </button>
               </h1>
               <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
